# anofox-tabfm

./: .ciconfig  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  TELEMETRY.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  _extension_deploy.yml
cmake/: embed_resources.cmake  ort.cmake
docs/: CODE_REVIEW_2026-07-04.md  COREML_LOCAL_PLAN.md  COREML_PLAN.md  GPU_AND_MEMORY_FINDINGS.md  KV_CACHE_DESIGN.md  MULTI_MODEL_PLAN.md  PERFORMANCE_PLAN.md  PURE_SQL_SURFACE_PLAN.md  REAL_MODELS.md  RUST_CANDLE_FEASIBILITY.md  WINDOWS_INFERENCE.md  rocm-build.md
examples/: README.md  classification_churn.sql  classification_income.sql  classification_iris.sql  compare_models.sql  mitra.json  regression_tips.sql  regression_wine.sql  tabfm_real_classification.json  tabfm_real_regression.json  tabicl.json  tabpfn.json
resources/: README.md  export_report_classification.json  export_report_regression.json  export_report_tabicl_classification.json  export_report_tabicl_regression.json  export_report_tabpfn_classification.json  export_report_tabpfn_regression.json  graph_classification.onnx  graph_ext_classification.onnx  graph_ext_regression.onnx  graph_migraphx_classification.onnx  graph_migraphx_regression.onnx  graph_mitra_classification.onnx  graph_mitra_regression.onnx  graph_regression.onnx  graph_tabicl_classification.onnx  graph_tabicl_regression.onnx  graph_tabpfn_classification.onnx  graph_tabpfn_regression.onnx  tensor_map_classification.json  tensor_map_mitra_classification.json  tensor_map_mitra_regression.json  tensor_map_regression.json  tensor_map_tabicl_classification.json  tensor_map_tabicl_regression.json  tensor_map_tabpfn_classification.json  tensor_map_tabpfn_regression.json
scenarios/: README.md  churn_f1.sql  tabfm_real_classification.json  tabfm_real_regression.json  tips_mse.sql
src/: anofox_tabfm_extension.cpp  tabfm_ckpt.cpp  tabfm_devices.cpp  tabfm_engine.cpp  tabfm_ensemble.cpp  tabfm_macros.cpp  tabfm_manifest.cpp  tabfm_migraphx.cpp  tabfm_model_spec.cpp  tabfm_ort_engine.cpp  tabfm_predict_agg.cpp  tabfm_preprocess.cpp  tabfm_registry.cpp  tabfm_safetensors.cpp  tabfm_settings.cpp  tabfm_state.cpp  tabfm_weights.cpp
src/include/: anofox_function_alias.hpp  anofox_tabfm_extension.hpp  tabfm_bundled_resources.hpp  tabfm_ckpt.hpp  tabfm_ensemble.hpp  tabfm_manifest.hpp  tabfm_migraphx.hpp  tabfm_model_spec.hpp  tabfm_ort_engine.hpp  tabfm_predict.hpp  tabfm_preprocess.hpp  tabfm_registration.hpp  tabfm_registry.hpp  tabfm_safetensors.hpp  tabfm_state.hpp
test/cpp/: test_tabfm_bundled_resources.cpp  test_tabfm_ckpt.cpp  test_tabfm_ensemble.cpp  test_tabfm_manifest.cpp  test_tabfm_model_spec.cpp  test_tabfm_ort_engine.cpp  test_tabfm_preprocess.cpp  test_tabfm_registry.cpp  test_tabfm_safetensors.cpp  test_tabfm_scaffold.cpp
test/fixtures/: FIXTURE_SHA256  golden.json  golden_preprocess.json  graph_fixture.onnx  manifest.json  model.safetensors  tensor_map_fixture.json
test/fixtures/ckpt/: tiny.ckpt  tiny.golden.json
test/fixtures/mitra/: export_report_mitra_classification.json  export_report_mitra_regression.json  golden_classification.json  golden_regression.json  graph_mitra_classification.onnx  graph_mitra_regression.onnx  manifest.json  model_classification.safetensors  model_regression.safetensors  tensor_map_mitra_classification.json  tensor_map_mitra_regression.json
test/fixtures/multi/: fixture_commercial.json
test/fixtures/multi_bad/: fixture_badcontract.json
test/fixtures/ort_engine/: gen_mlp_fixture.py  mlp_expected.json  mlp_graph.onnx  mlp_weights.f32
test/fixtures/regression/: FIXTURE_SHA256  golden.json  graph_fixture.onnx  manifest.json  model.safetensors  tensor_map_fixture.json
test/fixtures/tabicl/: golden.json  golden_classification.json  golden_regression.json  graph_tabicl_classification.onnx  graph_tabicl_fixture.onnx  graph_tabicl_regression.onnx  (+6 more)
test/sql/: settings.test  tabfm_classify.test  tabfm_cobatch.test  tabfm_contract.test  tabfm_devices.test  tabfm_function_docs.test  tabfm_license.test  tabfm_lifecycle.test  tabfm_mitra.test  tabfm_model_arg.test  tabfm_multimodel.test  tabfm_multimodel_v2.test  tabfm_predict.test  tabfm_predict_agg.test  tabfm_predict_by.test  tabfm_predict_errors.test  tabfm_predict_win.test  tabfm_register.test  tabfm_registry_meta.test  tabfm_regress.test  tabfm_tabicl.test  tabfm_tabpfn.test  tabfm_weights.test  telemetry.test
toolchains/: README.md  arm64-linux-release.cmake  arm64-linux.cmake  x64-linux-release.cmake  x64-linux.cmake
tools/: make_external_graph.py
tools/experimental/: make_external_data_graph.py  make_migraphx_graph.py  mgx_smoke.cpp
tools/export_mitra/: README.md  pyproject.toml
tools/export_mitra/src/export_mitra/: cli.py  configs.py  export.py  mitra_model_patched.py
tools/export_mitra/tests/: test_export.py
tools/export_onnx/: pyproject.toml
tools/export_onnx/src/export_onnx/: __init__.py  cli.py  configs.py  export.py  tabfm_model_patched.py
tools/export_onnx/tests/: test_export.py  test_patched_model.py
tools/export_onnx/tests/data/: config_classification.json
tools/export_tabicl/: README.md  convert_weights.py  pyproject.toml
tools/export_tabicl/src/export_tabicl/: __init__.py  cli.py  configs.py  export.py  fixture.py  fixture_cli.py  tabicl_patches.py
tools/export_tabicl/tests/: test_export.py
tools/export_tabpfn/: .gitignore  convert_weights.py  make_fixture.py  parity_real.py  pyproject.toml
tools/export_tabpfn/src/export_tabpfn/: __init__.py  cli.py  configs.py  export.py  tabpfn_patched.py
tools/export_tabpfn/tests/: test_export.py
tools/make_fixture/: pyproject.toml
tools/make_fixture/src/make_fixture/: __init__.py  cli.py  fixture.py  golden_preprocess.py  upstream.py
tools/make_fixture/tests/: test_fixture.py  test_golden_preprocess.py
tools/tabfm_tui/: README.md  pyproject.toml
tools/tabfm_tui/src/tabfm_tui/: __init__.py  app.py  session.py
tools/tabfm_tui/tests/: test_tui.py
vcpkg_ports/onnxruntime/: portfile.cmake
(+18 files in other folders)
