# WS-A (Mitra): shipping pipeline — weight-free ONNX graph + tensor map for
# AWS AutoGluon's Mitra (Tab2D) tabular foundation model.
#
#   uv sync
#   uv run export_mitra --task classification --config real --out ./out
#   uv run export_mitra --task classification --config fixture --out ./out
#   uv run pytest
#
# torch is pinned to the CPU index so no CUDA wheels are pulled. Mitra's
# _internal package is NOT a dependency: the model is re-implemented in
# mitra_model_patched.py (Apache-2.0 upstream, ONNX-friendly rewrites of the
# non-exportable ops) with byte-identical param names so the released
# safetensors load unchanged.
[project]
name = "export-mitra"
version = "0.1.0"
description = "anofox-tabfm Mitra exporter: Tab2D -> weight-free ONNX graph + tensor-name map"
requires-python = ">=3.11"
dependencies = [
    "torch==2.12.1",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "onnxscript>=0.2",
    "numpy",
    "safetensors",
    "huggingface_hub",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
export_mitra = "export_mitra.cli:main"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/export_mitra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
