# Export spike: soda-inria TabICL (BSD-3-Clause) -> weight-free ONNX graph +
# tensor-name map + random-init CI fixture.
#
#   uv sync
#   uv run export_tabicl --task classification --config real --out ./out
#   uv run export_tabicl --task regression     --config real --out ./out
#   uv run make_tabicl_fixture ../../test/fixtures/tabicl   # builds the fixture
#   uv run pytest
#
# torch is pinned to 2.12.1 (matches tools/export_onnx). tabicl>=2.1 pulls the
# TabICL v2 architecture; no checkpoint weights are downloaded by this project.
[project]
name = "export-tabicl"
version = "0.1.0"
description = "anofox-tabfm export spike: TabICL -> weight-free ONNX graph + tensor-name map"
requires-python = ">=3.11"
dependencies = [
    "torch==2.12.1",
    "tabicl>=2.1",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "onnxscript>=0.2",
    "numpy",
    "safetensors",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
export_tabicl = "export_tabicl.cli:main"
make_tabicl_fixture = "export_tabicl.fixture_cli:main"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/export_tabicl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
