# WS-A (TabPFN v2): weight-free ONNX graph + tensor map exporter for
# Prior Labs TabPFN v2 (permissive PriorLabs License v1.1).
#
#   uv sync
#   uv run export_tabpfn --task classification --config fixture --out ./out
#   uv run pytest
#
# torch resolved from the PyTorch CPU index so no CUDA wheels are pulled.
[project]
name = "export-tabpfn"
version = "0.1.0"
description = "anofox-tabfm TabPFN v2 exporter: TabPFN v2 -> weight-free ONNX graph + tensor-name map"
requires-python = ">=3.11"
dependencies = [
    "tabpfn>=2.2",
    "torch>=2.6",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "onnxscript>=0.2",
    "numpy",
    "safetensors",
    "huggingface-hub",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
export_tabpfn = "export_tabpfn.cli:main"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/export_tabpfn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
