[project]
name = "tabfm-tui"
version = "0.1.0"
description = "A Textual TUI to try the anofox-tabfm DuckDB extension quickly. Dev/demo tool only — the extension itself has no Python dependency."
requires-python = ">=3.10"
dependencies = [
    "textual>=0.60",
    "duckdb>=1.1",
]

[project.scripts]
tabfm-tui = "tabfm_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tabfm_tui"]
